View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026526 | Community | OCCT:Modeling Data | public | 2015-08-06 12:01 | 2016-04-20 15:48 |
Reporter | Vico Liang | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026526: BRepTools_WireExplorer can't explore all edges of a closed wire. | ||||
Description | TopoDS_Wire aWire = // Load from Wire_Explorer.brep for (BRepTools_WireExplorer aWE(aWire); aWE.More(); aWE.Next()) { } The loop above can't iterate all edges of the wire, it will just iterate several edges of the wire. | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Wire_Explorer.brep (1,048 bytes) |
|
It is not a bug. One of edge has bad orientation (see attached picture), so wire cannot be explored by BRepTools_WireExplorer. |
|
wire.PNG (49,786 bytes) |
|
I confirm. This tools works correctly only with correct input data. If a wire has incorrectly oriented edges the internal iteration stops. If you need to iterate all the edges in incorrect wire you need to use TopoDS_Iterator, which returns not ordered edges, or ShapeExtend_WireData, which allows reordering. |
|
Dear Vico, please confirm closing this bug. |
|
Dear msv, yes, i agree that there is no incorrectly oriented edges. Do you think it's still possible to iterate the loop edges? anyway, it's a closed wire and all the edges are connected end-to-end. |
|
Dear Vico, yes, it is possible to iterate on this loop. For that you can use the class ShapeExtend_WireData. It will return you edges ordered and tell about correct orientation. |
|
Dear msv, Thank you for your help. I suggest to enhance the document of BRepTools_WireExplorer to indicate such situation. |
|
Dear ifv, please update the class description taking into account this situation. |
|
In my opinion, class description contains information that this algo cannot explore wrong wires: //!If a wire is not closed returns only a segment of edges which //! length depends on started in exploration edge. If wire has //! singularities (for example, loops) WireExplorer can return not all //! edges in a wire. it depends on type of singularity. |
|
I propose to point the bad edge orientation as a particular case of singularity. |
|
Branch CR26526 has been created by ifv. SHA-1: d2129c5e626b09eb49af15554a8197aa35b1caac Detailed log of new commits: Author: ifv Date: Mon Oct 5 18:29:25 2015 +0300 0026526: BRepTools_WireExplorer can't explore all edges of a closed wire. |
|
Branch CR26526 is ready to review |
|
Reviewed. No need to test, as only comments were modified. |
|
Dear BugMaster, Branch CR26526 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: d2129c5e626b09eb49af15554a8197aa35b1caac Number of compiler warnings: occt component : Linux: 13 (13 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) |
|
Dear BugMaster, Branch CR26526 is TESTED. |
|
Branch CR26526 has been deleted by kgv. SHA-1: d2129c5e626b09eb49af15554a8197aa35b1caac |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-08-06 12:01 | Vico Liang | New Issue | |
2015-08-06 12:01 | Vico Liang | Assigned To | => msv |
2015-08-06 12:01 | Vico Liang | File Added: Wire_Explorer.brep | |
2015-08-07 11:52 | msv | Assigned To | msv => ifv |
2015-09-22 13:55 | ifv | Note Added: 0046002 | |
2015-09-22 13:55 | ifv | Assigned To | ifv => msv |
2015-09-22 13:55 | ifv | Status | new => resolved |
2015-09-22 13:55 | ifv | Steps to Reproduce Updated | |
2015-09-22 13:55 | ifv | File Added: wire.PNG | |
2015-09-23 11:28 | msv | Note Added: 0046025 | |
2015-09-23 11:28 | msv | Assigned To | msv => bugmaster |
2015-09-23 11:28 | msv | Status | resolved => reviewed |
2015-09-23 11:28 | msv | Resolution | open => no change required |
2015-09-23 11:30 | msv | Note Added: 0046026 | |
2015-09-23 11:30 | msv | Assigned To | bugmaster => Vico Liang |
2015-09-23 11:30 | msv | Status | reviewed => feedback |
2015-09-27 17:07 | Vico Liang | Note Added: 0046179 | |
2015-09-27 17:07 | Vico Liang | Assigned To | Vico Liang => msv |
2015-09-27 17:07 | Vico Liang | Status | feedback => acknowledged |
2015-09-28 09:28 | msv | Note Added: 0046183 | |
2015-09-28 09:28 | msv | Assigned To | msv => Vico Liang |
2015-09-29 04:51 | Vico Liang | Note Added: 0046238 | |
2015-09-29 04:52 | Vico Liang | Assigned To | Vico Liang => msv |
2015-09-30 09:50 | msv | Note Added: 0046309 | |
2015-09-30 09:50 | msv | Assigned To | msv => ifv |
2015-09-30 09:50 | msv | Status | acknowledged => assigned |
2015-10-05 17:38 | ifv | Assigned To | ifv => msv |
2015-10-05 17:39 | ifv | Note Added: 0046483 | |
2015-10-05 17:39 | ifv | Status | assigned => feedback |
2015-10-05 17:48 | msv | Note Added: 0046484 | |
2015-10-05 17:48 | msv | Assigned To | msv => ifv |
2015-10-05 17:48 | msv | Status | feedback => assigned |
2015-10-05 18:29 | git | Note Added: 0046485 | |
2015-10-05 18:31 | ifv | Note Added: 0046486 | |
2015-10-05 18:31 | ifv | Assigned To | ifv => msv |
2015-10-05 18:31 | ifv | Status | assigned => resolved |
2015-10-05 18:49 | msv | Note Added: 0046488 | |
2015-10-05 18:49 | msv | Assigned To | msv => bugmaster |
2015-10-05 18:49 | msv | Status | resolved => reviewed |
2015-10-05 18:50 | msv | Resolution | no change required => documentation updated |
2015-10-05 19:53 |
|
Assigned To | bugmaster => mkv |
2015-10-06 15:09 |
|
Note Added: 0046514 | |
2015-10-06 15:09 |
|
Note Added: 0046515 | |
2015-10-06 15:09 |
|
Assigned To | mkv => bugmaster |
2015-10-06 15:09 |
|
Status | reviewed => tested |
2015-10-06 15:10 |
|
Test case number | => Not needed |
2015-10-16 13:18 | bugmaster | Changeset attached | => occt master 94520b24 |
2015-10-16 13:18 | bugmaster | Status | tested => verified |
2015-10-16 13:18 | bugmaster | Resolution | documentation updated => fixed |
2015-10-16 16:57 | git | Note Added: 0047076 | |
2016-04-20 15:44 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:48 |
|
Status | verified => closed |