0026526: BRepTools_WireExplorer can't explore all edges of a closed wire.